compiler/tools/fpp-check/test/port_instance/undef_param_set.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_param_set.fpp:3.3
  param set port paramSetOut
  ^
error: symbol Fw is not defined
note: looking for a port here
